# tank-template

./: .example.env  CONTRIBUTING.md  LICENSE  Makefile  README.md  add_github_hooks.sh  hello.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/agents/: squad.agent.md
.github/workflows/: python-versions.yml
requirements/: apt_packages.txt  common.txt
src/: __init__.py  hello.py
testing/: test_hello.py
tests/: test_hello.py
